--- a/css/accordion.css
+++ b/css/accordion.css
@@ -1,28 +1,35 @@
 .js [data-accordion] dd {
-    display: none;
+  display: none;
 }
 
 [data-accordion] dt::after {
-    content: "⬎";
-    margin-left: 10px;
+  content: "";
+  width: 10px;
+  height: 10px;
+  display: inline-block;
+  background: url("../img/arrow-red.svg") no-repeat center center;
+  margin-left: 10px;
+  transform: rotate(90deg);
+  transition: transform 0.3s ease-in-out;
 }
 
 [data-accordion] dt.is-active::after {
-    content: "⬏";
+  content: "";
+  transform: rotate(-90deg);
 }
 
 [data-accordion] dd.is-active {
-    display: block;
-    animation: slideDown 0.5s forwards;
+  display: block;
+  animation: slideDown 0.5s forwards;
 }
 
 @keyframes slideDown {
-    from {
-        opacity: 0;
-        max-height: 0;
-    }
-    to {
-        max-height: 200px;
-        opacity: 1;
-    }
+  from {
+    opacity: 0;
+    max-height: 0;
+  }
+  to {
+    max-height: 200px;
+    opacity: 1;
+  }
 }
