--- a/css/geral.css
+++ b/css/geral.css
@@ -245,7 +245,7 @@ body {
     grid-column: 1 / 3;
   }
   .grid-section h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
   .menu {
     margin-top: 0px;
@@ -253,4 +253,11 @@ body {
   .copy {
     margin-bottom: 0px;
   }
+}
+
+.arrow-black {
+  background: url(../img/arrow-black.svg) no-repeat center center;
+  display: inline-block;
+  width: 8px;
+  height: 10px;
 }
