--- a/css/modal.css
+++ b/css/modal.css
@@ -1,84 +1,88 @@
 .modal {
-    display: none;
-    background: rgba(0, 0, 0, .5);
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 2000;
-    justify-content: center;
-    align-items: center;
+  display: none;
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2000;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal.is-active {
-    display: flex;
+  display: flex;
 }
 
 @keyframes modal {
-    from {
-        opacity: 0;
-        transform: translate3d(0, -30px, 0);
-    }
+  from {
+    opacity: 0;
+    transform: translate3d(0, -30px, 0);
+  }
 
-    to {
-        opacity: 1;
-        transform: translate3d(0, 0, 0);
-    }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
 }
 
 .modal-content {
-    background: #ffffff;
-    padding: 40px;
-    border: 10px solid #ffbb55;
-    box-shadow: 0 0 0 10px #fff;
-    position: relative;
-    min-width: 300px;
+  background: #ffffff;
+  padding: 40px;
+  border: 10px solid #ffbb55;
+  box-shadow: 0 0 0 10px #fff;
+  position: relative;
+  width: 80vw;
+  max-width: 600px;
+  box-sizing: border-box;
 }
 
 .modal.is-active .modal-content {
-    animation: modal .3s forwards;
+  animation: modal 0.3s forwards;
 }
 
 .modal-close {
-    position: absolute;
-    top: -30px;
-    right: -30px;
-    width: 50px;
-    height: 50px;
-    border: 4px solid #fff;
-    border-radius: 50%;
-    background: #e54;
-    font-size: 1.2em;
-    color: #fff;
-    font-family: 'IBM Plex Mono', monospace;
-    cursor: pointer;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, .3);
+  position: absolute;
+  top: -30px;
+  right: -30px;
+  width: 50px;
+  height: 50px;
+  border: 4px solid #fff;
+  border-radius: 50%;
+  background: #e54 url("../img/fechar.svg") no-repeat center center;
+  font-size: 1.2em;
+  color: #fff;
+  font-family: "IBM Plex Mono", monospace;
+  cursor: pointer;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
 }
 
 .modal label {
-    font-family: 'IBM Plex Mono', monospace;
-    display: block;
-    font-weight: bold;
-    margin: 1rem 0 .5rem 0;
+  font-family: "IBM Plex Mono", monospace;
+  display: block;
+  font-weight: bold;
+  margin: 1rem 0 0.5rem 0;
 }
 
 .modal input {
-    width: 100%;
-    padding: 0.7rem .5rem;
-    box-sizing: border-box;
+  width: 100%;
+  padding: 0.7rem 0.5rem;
+  box-sizing: border-box;
+  border: 2px solid #222;
+  border-radius: 0;
 }
 
 .modal button[type="submit"] {
-    display: block;
-    background: #e54;
-    border: none;
-    border-radius: 4px;
-    padding: .7rem 2rem;
-    font-size: 1rem;
-    color: #fff;
-    font-family: 'IBM Plex Mono', monospace;
-    margin-top: 1rem;
-    cursor: pointer;
-    font-weight: bold;
+  display: block;
+  background: #e54;
+  border: none;
+  border-radius: 4px;
+  padding: 0.7rem 2rem;
+  font-size: 1rem;
+  color: #fff;
+  font-family: "IBM Plex Mono", monospace;
+  margin-top: 1rem;
+  cursor: pointer;
+  font-weight: bold;
 }
